# pixi_setuptools

./: README.md  pyproject.toml
src/pixi_setuptools/: _version.py  employees.yaml  yaml_processor.py
src/pixi_setuptools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
